fix: Fix columns visibility flaw on Chrome54 and up

--- a/src/scss/_tabellajs.scss
+++ b/src/scss/_tabellajs.scss
@@ -1,34 +1,32 @@
-*, *:before, *:after {
+*,
+*:after,
+*:before {
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
 }
 
-
-.tabella-ctr{
-    display: block;
-    position: relative;
-    width: 100%;
-    margin: 1rem 0 2rem;
-    @include single-transition();
+.tabella-ctr {
+	display: block;
+	position: relative;
+	width: 100%;
+	margin: 1rem 0 2rem;
+	@include single-transition();
 }
-
 /*
 ===========================
 TABLE HEADER
 ===========================*/
-
-.t-fixed-header{
+.t-fixed-header {
 	display: block;
 	z-index: -1;
 }
 
-.t-first-row{
+.t-first-row {
 	z-index: 100;
 }
 
-.t-shadow{
-
+.t-shadow {
 	-moz-transform: translate3d(0, 0, 0);
 	-o-transform: translate3d(0, 0, 0);
 	-ms-transform: translate3d(0, 0, 0);
@@ -44,34 +42,30 @@ TABLE HEADER
 	-ms-perspective: 1000;
 	-o-perspective: 1000;
 	perspective: 1000;
- 
+	-webkit-box-shadow: 0 4px 7px 0 rgba(0,0,0,0.1);
+	box-shadow: 0 4px 7px 0 rgba(0,0,0,0.1);
 
-	-webkit-box-shadow: 0px 4px 7px 0px rgba(0,0,0,0.1);
-  	box-shadow: 0px 4px 7px 0px rgba(0,0,0,0.1);
-
-  	&::before{
-  		position: absolute;
-  		content: '';
-  		top: -1px;
-  		width: 100%;
-  		height: 1px;
-  		background-color: #ccc;
-  	}
+	&::before {
+		position: absolute;
+		content: '';
+		top: -1px;
+		width: 100%;
+		height: 1px;
+		background-color: #ccc;
+	}
 }
-
 /**
 * WATCH OUT! The height property given to a table displayed element, is equal to min-height.
 * Hence, it is going to expand when the content is higher than that height.
 */
-.t-first-row .t-row-cell{
+.t-first-row .t-row-cell {
 	height: 3.4rem;
 }
-
 /*
 ===========================
 MAIN RULES
 ===========================*/
-.t-row{
+.t-row {
 	position: relative;
 	display: block;
 	width: 100%;
@@ -79,14 +73,14 @@ MAIN RULES
 	border: 1px solid $border-color;
 }
 
-.t-row-content-wrapper{
+.t-row-content-wrapper {
 	position: relative;
 	display: block;
 	height: 100%;
 	overflow: hidden;
 }
 
-.t-row-content{
+.t-row-content {
 	position: relative;
 	display: block;
 	height: 100%;
@@ -94,7 +88,7 @@ MAIN RULES
 	background-color: #fff;
 }
 
-.t-row-header{
+.t-row-header {
 	display: block;
 	position: relative;
 	width: 100%;
@@ -104,13 +98,14 @@ MAIN RULES
 	color: $primary-color;
 }
 
-.t-cell-desc-l, .t-cell-desc-s{
-	.t-header-devider{
+.t-cell-desc-l,
+.t-cell-desc-s {
+	.t-header-devider {
 		text-align: left;
 	}
 }
 
-.t-header-devider{
+.t-header-devider {
 	display: block;
 	clear: both;
 	text-align: center;
@@ -118,23 +113,20 @@ MAIN RULES
 	margin-bottom: 0.2rem;
 }
 
-.t-sliding-row{
+.t-sliding-row {
 	position: relative;
 	overflow: auto;
 	@extend .t-no-select;
-	-webkit-backface-visibility: hidden; 
-   	backface-visibility: hidden;
-
 }
 
-.t-row-values{
+.t-row-values {
 	float: left;
 	position: relative;
 	font-size: 1rem;
 	overflow: hidden;
 }
 
-.t-row-desc{
+.t-row-desc {
 	float: left;
 	display: table;
 	position: relative;
@@ -145,9 +137,7 @@ MAIN RULES
 	text-align: center;
 }
 
-
-
-.t-row-cell{
+.t-row-cell {
 	float: left;
 	display: table;
 	position: relative;
@@ -155,27 +145,26 @@ MAIN RULES
 	padding: 0.4rem 0.1rem;
 	color: hsla(200,0%,0%,.7);
 	//color: #fff;
-
-	&:nth-of-type(odd){
+	&:nth-of-type(odd) {
 		background-color: $odd-background-color;
 	}
 
-	&:nth-of-type(even){
+	&:nth-of-type(even) {
 		background-color: $even-background-color;
 	}
 }
 
-.t-cell-border-top::before{
+.t-cell-border-top::before {
 	content: "";
 	position: absolute;
 	top: 0;
 	left: 0.9rem;
 	right: 0.9rem;
-	height: 0px;
+	height: 0;
 	border-top: 1px dotted $border-color;
 }
 
-.t-element{
+.t-element {
 	display: table-cell;
 	width: 100%;
 	margin: 0 auto;
@@ -184,7 +173,7 @@ MAIN RULES
 	vertical-align: middle;
 }
 
-.t-cell-value{
+.t-cell-value {
 	//float: left;
 	display: inline-block;
 	text-align: left;
@@ -192,7 +181,7 @@ MAIN RULES
 	cursor: default;
 }
 
-.t-cell-desc-s{
+.t-cell-desc-s {
 	//float: left;
 	display: inline-block;
 	margin-right: 0.4rem;
@@ -200,7 +189,7 @@ MAIN RULES
 	color: hsla(200,0%,0%,.3);
 }
 
-.t-cell-desc-l{
+.t-cell-desc-l {
 	display: inline-block;
 	position: relative;
 	height: 100%;
@@ -210,14 +199,14 @@ MAIN RULES
 	font-style: italic;
 }
 
-.t-hide{
+.t-hide {
 	display: none !important;
 	width: 0;
 	height: 0;
 	z-index: -1;
 }
 
-.t-arrow{
+.t-arrow {
 	position: absolute;
 	z-index: 500;
 	width: 3rem;
@@ -235,64 +224,60 @@ MAIN RULES
 	@include box-shadow;
 	@include single-transition;
 
-	&:active{
+	&:active {
 		@include box-shadow(none);
 		margin-top: 0.28rem;
 	}
-	
 }
 
-
-.t-arr-right{
+.t-arr-right {
 	@extend .t-arrow;
 	@extend .t-no-select;
 	right: 0;
 	margin-right: -0.7rem;
 
-	svg{
+	svg {
 		position: relative;
 		width: 60%;
 		height: 60%;
 		top: 10%;
 	}
-	
 }
 
-.t-arr-left{
+.t-arr-left {
 	@extend .t-arrow;
 	@extend .t-no-select;
 	left: 0;
 	margin-left: -0.7rem;
 
-	svg{
+	svg {
 		position: relative;
 		width: 60%;
 		height: 60%;
 		top: 10%;
 	}
-
 }
 
-.t-svg-arrow{
+.t-svg-arrow {
 	fill: #fff;
 }
 
-.t-bold{
+.t-bold {
 	font-weight: bold;
 }
 
 /*
 =====================
  COMMON RULES
-=====================
-*/
-
+=====================*/
 .t-no-select {
-  -webkit-user-select: none;  /* Chrome all / Safari all */
-  -moz-user-select: none;     /* Firefox all */
-  -ms-user-select: none;      /* IE 10+ */
-
-  /* No support for these yet, use at own risk */
-  -o-user-select: none;
-  user-select: none;          
+	-webkit-user-select: none;
+	/* Chrome all / Safari all */
+	-moz-user-select: none;
+	/* Firefox all */
+	-ms-user-select: none;
+	/* IE 10+ */
+	/* No support for these yet, use at own risk */
+	-o-user-select: none;
+	user-select: none;
 }
